--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core:1.6.0'
+            force "androidx.core:core-ktx:1.6.0"
+        }
+    }
 }
 
 dependencies {
