--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
             force "androidx.core:core-ktx:1.6.0"
         }
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
